src/Components/Table/style.scss
@import "../../colors.scss";
.table-container {
  // border: 1px solid lightgray;
  // overflow-x: scroll;
  width: 100%;
  position: relative;
}

table.collection-building-table,
table.collection-building-table td,
table.collection-building-table th {
  background-color: $WHITE;
  border: 1px solid;
  border-collapse: collapse;
  text-align: center;
  padding: 2px 4px;
}

table.collection-building-table tbody tr {
  &:hover {
    background-color: $GREY_50;
  }
  td {
    font-weight: 500;
  }
}

.column-header {
  display: flex;
  flex-direction: column;
  height: 150px;

  .column-header__label {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .column-header__sort-icons {
    display: flex;
    margin-left: 5px;
    font-size: 0.7rem; // 11.2px
  }
}

.filter__input_range {
  display: flex;
  justify-content: center;
  input {
    width: 2.8rem;
    border-radius: 4px;
    border-width: 1px;
  }
  input:last-of-type {
    margin-left: 8px;
  }
}

.filter__input_text {
  width: 12rem;
  border-radius: 4px;
  border-width: 1px;
}

.pagination-controls {
  display: flex;
  align-items: center;
  justify-content: center;

  .pagination-controls__pages {
    display: flex;
  }
}

.clear-all {
  margin-bottom: 1.5rem;
}

